--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ ul{
 
 
 .responsive{
-    background-color: #259e5d;
+    background-color: #199c56;
     padding: 1px 15px;
     transform: translateX(1rem);
 }
